# easy-bi

./: .gitignore  DUCKDB_MIGRATION_PLAN.md  README.md  build.py  create_icon.py  main.py  package.bat  pyproject.toml  run-template.bat  数据整理工具.spec
api/: .gitignore  build-api.bat  pom.xml  run-api.bat  run-dev.bat
api/src/main/java/com/bi/: BiApplication.java
api/src/main/java/com/bi/ai/: AgentService.java  AiController.java  AiTool.java  LlmClient.java  ToolRegistry.java
api/src/main/java/com/bi/config/: DuckDbConfig.java  (+1 more)
api/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
config/: schemas.yaml
data/: create_dataset.json  test_salary.csv  test_sales.csv
docs/: API_TEST_CASES.md  DUCKDB_MIGRATION_PLAN.md  shop_dashboard.py
scripts/: excel_to_csv.py  pyproject.toml
src/: export.py  ingest.py  reports.py  transform.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx
web/src/components/dataset/: DatasetFormDialog.tsx
web/src/components/datasource/: AppendDialog.tsx  DataSourceCard.tsx  PreviewSheet.tsx  UploadDialog.tsx
web/src/components/layout/: AppLayout.tsx  AppSidebar.tsx
web/src/components/query/: SaveDatasetDialog.tsx  SqlEditor.tsx  TableBrowser.tsx
web/src/components/settings/: SettingsDialog.tsx
web/src/components/shared/: ConfirmDialog.tsx  PaginationBar.tsx  ResultTable.tsx
web/src/components/ui/: sheet.tsx
web/src/hooks/: use-async.ts
web/src/lib/: api.ts
web/src/pages/: AiPage.tsx  DataSourcesPage.tsx  DatasetDetailPage.tsx  DatasetEditPage.tsx  DatasetsPage.tsx  QueryPage.tsx
(+37 files in other folders)
